ICE-7892 - Fixed CSS rule stopping overflow from td.

--- a/icefaces3/branches/icefaces-3.0.x-maintenance/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
+++ b/icefaces3/branches/icefaces-3.0.x-maintenance/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
@@ -50,7 +50,6 @@
     border-width:1px;
     padding:4px 10px;
     text-align: center;
-    overflow: hidden;
 }
 
 .ui-datatable .ui-paginator {
